JumpScript/tests/baselines/reference/typeOfThisInStaticMembers2.errors.txt
tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers2.jump(2,18): error TS2334: 'this' cannot be referenced in a static property initializer.
tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers2.jump(6,18): error TS2334: 'this' cannot be referenced in a static property initializer.


==== tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers2.jump (2 errors) ====
    class C {
        static foo = this; // error
                     ~~~~
!!! error TS2334: 'this' cannot be referenced in a static property initializer.
    }
    
    class C2<T> {
        static foo = this; // error
                     ~~~~
!!! error TS2334: 'this' cannot be referenced in a static property initializer.
    }